# avidhd

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  tauri.conf.json
src/: main.rs
ui/: index.html  settings.html
